--- a/src/LSTM/LSTM_V1_6.ipynb
+++ b/src/LSTM/LSTM_V1_6.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 460,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 462,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +120,7 @@
     "if torch.cuda.is_available():\n",
     "    DEVICE = torch.device(f\"cuda\") \n",
     "    #DEVICE = torch.device(\"cuda:1\")   # or overwrite with explicit Core number\n",
-    "    print(f'Currently Selected Device: {torch.cuda.current_device()},  Total Count: {torch.cuda.device_count()}')\n",
+    "    print(f'Currently Selected Device: {torch.cuda.current_device()}')\n",
     "else:\n",
     "    DEVICE = (\"cpu\")\n",
     "print(f\"   --> Using {DEVICE} device\")"
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 463,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 464,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 465,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -193,15 +193,80 @@
      "output_type": "stream",
      "text": [
       "------------------------------------------------------------\n",
-      "Total Files: 1000\n",
-      "------------------------------------------------------------\n"
+      "Total Files: 2975\n",
+      "------------------------------------------------------------\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 2367 entries, 0 to 2366\n",
+      "Data columns (total 58 columns):\n",
+      " #   Column                           Non-Null Count  Dtype         \n",
+      "---  ------                           --------------  -----         \n",
+      " 0   signal_time                      2367 non-null   datetime64[ns]\n",
+      " 1   accelpdlposn_cval                2367 non-null   float64       \n",
+      " 2   actdrvtrnpwrprc_cval             2367 non-null   float64       \n",
+      " 3   actualdcvoltage_pti1             2367 non-null   float64       \n",
+      " 4   actualspeed_pti1                 2367 non-null   float64       \n",
+      " 5   actualtorque_pti1                2367 non-null   float64       \n",
+      " 6   airtempinsd_cval_hvac            2367 non-null   float64       \n",
+      " 7   airtempinsd_rq                   2367 non-null   float64       \n",
+      " 8   airtempoutsd_cval_cpc            2367 non-null   float64       \n",
+      " 9   altitude_cval_ippc               2367 non-null   float64       \n",
+      " 10  brc_stat_brc1                    2367 non-null   float64       \n",
+      " 11  brktempfa_cval                   2367 non-null   float64       \n",
+      " 12  bs_brk_cval                      2367 non-null   float64       \n",
+      " 13  bs_roadincln_cval                2367 non-null   float64       \n",
+      " 14  cc_actv_stat                     2367 non-null   float64       \n",
+      " 15  cc_setspd_cval                   2367 non-null   float64       \n",
+      " 16  currpwr_contendrnbrkresist_cval  2367 non-null   float64       \n",
+      " 17  dsrdpwr_contendrn_cval           2367 non-null   float64       \n",
+      " 18  elcomp_pwrcons_cval              2367 non-null   float64       \n",
+      " 19  emot_pwr_cval                    2367 non-null   float64       \n",
+      " 20  epto_pwr_cval                    2367 non-null   float64       \n",
+      " 21  grocmbvehweight_cval             2367 non-null   float64       \n",
+      " 22  hirestotalvehdist_cval_icuc      2367 non-null   float64       \n",
+      " 23  hv_bat_dc_momvolt_cval_bms1      2367 non-null   float64       \n",
+      " 24  hv_bat_soc_cval_bms1             2367 non-null   float64       \n",
+      " 25  hv_bat_soh_cval_bms1             2367 non-null   float64       \n",
+      " 26  hv_batavcelltemp_cval_bms1       2367 non-null   float64       \n",
+      " 27  hv_batcurr_cval_bms1             2367 non-null   float64       \n",
+      " 28  hv_bathighcelltemp_cval_bms1     2367 non-null   float64       \n",
+      " 29  hv_batisores_cval_e2e            2367 non-null   float64       \n",
+      " 30  hv_batlowcelltemp_cval_bms1      2367 non-null   float64       \n",
+      " 31  hv_batmaxchrgpwrlim_cval_1       2367 non-null   float64       \n",
+      " 32  hv_batmaxdischrgpwrlim_cval_1    2367 non-null   float64       \n",
+      " 33  hv_batmomavldischrgen_cval_1     2367 non-null   float64       \n",
+      " 34  hv_batpwr_cval_bms1              2367 non-null   float64       \n",
+      " 35  hv_chrgpwr_ecpc_cval             2367 non-null   float64       \n",
+      " 36  hv_curr_cval_dcl1                2367 non-null   float64       \n",
+      " 37  hv_dclink_volt_cval_dcl1         2367 non-null   float64       \n",
+      " 38  hv_ptc_cabin1_pwr_cval           2367 non-null   float64       \n",
+      " 39  hv_pwr_cval_dcl1                 2367 non-null   float64       \n",
+      " 40  latitude_cval_ippc               2367 non-null   float64       \n",
+      " 41  longitude_cval_ippc              2367 non-null   float64       \n",
+      " 42  lv_convpwr_cval_dcl1             2367 non-null   float64       \n",
+      " 43  maxbrickvoltage_bms01            2367 non-null   float64       \n",
+      " 44  maxrecuppwrprc_cval              2367 non-null   float64       \n",
+      " 45  maxtracpwrpct_cval               2367 non-null   float64       \n",
+      " 46  motortemperature_pti1            2367 non-null   float64       \n",
+      " 47  powerstagetemperature_pti1       2367 non-null   float64       \n",
+      " 48  pt4_dcb_hvdc_power_max_st3       2367 non-null   float64       \n",
+      " 49  pt4_dcb_temp1_st3                2367 non-null   float64       \n",
+      " 50  pt4_dcb_temp2_st3                2367 non-null   float64       \n",
+      " 51  rmsmotorcurrent_pti1             2367 non-null   float64       \n",
+      " 52  roadgrad_cval_pt                 2367 non-null   float64       \n",
+      " 53  selgr_rq_pt                      2367 non-null   float64       \n",
+      " 54  signal_ts                        2367 non-null   float64       \n",
+      " 55  txoiltemp_cval_tcm               2367 non-null   float64       \n",
+      " 56  vehspd_cval_cpc                  2367 non-null   float64       \n",
+      " 57  vehweight_cval_pt                2367 non-null   float64       \n",
+      "dtypes: datetime64[ns](1), float64(57)\n",
+      "memory usage: 1.0 MB\n"
      ]
     }
    ],
    "source": [
     "# PREPARE TRAIN & TEST SET ---------------------------------------------------\n",
     "all_files = [Path(input_folder, f) for f in os.listdir(input_folder) if f.endswith(\".parquet\")]\n",
-    "files = all_files[:1000]\n",
+    "files = all_files\n",
     "print(f\"{'-'*60}\\nTotal Files: {len(files)}\\n{'-'*60}\")\n",
     "# ---------------------------------------------------\n",
     "df = pd.read_parquet(Path(input_folder, random.choice(files)), engine='fastparquet')\n",
@@ -209,8 +274,8 @@
     "assert len(all_signals) == 58\n",
     "\n",
     "# get df stats:\n",
-    "'''df.info()\n",
-    "from scipy.stats import shapiro\n",
+    "# df.info()\n",
+    "'''from scipy.stats import shapiro\n",
     "nd = []\n",
     "for sig in df.columns:\n",
     "    if np.ptp(df[sig]) != 0:\n",
@@ -222,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 466,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,32 +322,27 @@
     "        self.targets = []\n",
     "\n",
     "        if self.fit:\n",
-    "            # Concatenate all data for fitting the scalers\n",
-    "            all_data = []\n",
-    "            all_targets = []\n",
+    "            # Initialize and Fit the scalers on the complete training data set\n",
+    "            # Fit the scalers incrementally to avoid memory errors\n",
     "            for file in self.file_list:\n",
-    "                # DATA PREPROCESSING -----------------------------------------------------------\n",
     "                df = pd.read_parquet(file, engine='fastparquet')\n",
     "                X = df[input_columns].values\n",
     "                y = df[target_column].values.reshape(-1, 1)  # Reshape to match the shape of the input\n",
-    "                all_data.append(X)\n",
-    "                all_targets.append(y)\n",
-    "            all_data = np.vstack(all_data)\n",
-    "            all_targets = np.vstack(all_targets)\n",
     "\n",
-    "            # Fit the scalers on the combined data\n",
-    "            self.scaler.fit(all_data)\n",
-    "            self.target_scaler.fit(all_targets)\n",
+    "                # Fit the scalers incrementally\n",
+    "                self.scaler.partial_fit(X)\n",
+    "                self.target_scaler.partial_fit(y)\n",
+    "\n",
+    "            print(f\"Scaler fitted: {scaler.__class__.__name__}, {target_scaler.__class__.__name__}\")\n",
     "\n",
     "        for file in self.file_list:\n",
     "            # DATA PREPROCESSING -----------------------------------------------------------\n",
-    "            df = pd.read_parquet(file, engine='fastparquet')\n",
-    "\n",
     "            # Assigning inputs and targets and reshaping ---------------\n",
+    "            df = pd.read_parquet(file, engine='fastparquet')\n",
     "            X = df[input_columns].values\n",
     "            y = df[target_column].values.reshape(-1, 1)  # Reshape to match the shape of the input\n",
     "            \n",
-    "            # Normalize inputs\n",
+    "            # use the previously fitted scalers to transform the data\n",
     "            X = self.scaler.transform(X)    \n",
     "            y = self.target_scaler.transform(y).squeeze()\n",
     "            \n",
@@ -307,18 +367,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 468,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# FEATURE NORMALIZATION/SCALING -----------------------------------------------------------------\n",
+    "# Transform features by scaling each feature to a given range\n",
     "scaler = MinMaxScaler(feature_range=(0, 1))    # Standardize features by removing the mean and scaling to unit variance\n",
-    "target_scaler = MinMaxScaler(feature_range=(0, 1))  #MinMaxScaler(feature_range=(0, 1))  # Transform features by scaling each feature to a given range"
+    "target_scaler = MinMaxScaler(feature_range=(0, 1))  #MinMaxScaler(feature_range=(0, 1))  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 469,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -337,10 +398,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Scaler fitted: MinMaxScaler, MinMaxScaler\n",
       "------------------------------------------------------------\n",
-      "Train size:  2782856\n",
-      "Val. size:   241192\n",
-      "Test size:   397453\n"
+      "Train size:  9737457\n",
+      "Val. size:   1378734\n",
+      "Test size:   1344491\n"
      ]
     }
    ],
@@ -362,9 +424,50 @@
     "test_loader = DataLoader(test_dataset, batch_size=batch_size, shuffle=False)\n",
     "\n",
     "# Print the size of the datasets\n",
-    "print(f\"{'-'*60}\\nTrain size:  {len(train_dataset)}\")\n",
-    "print(f'Val. size:   {len(val_dataset)}')\n",
-    "print(f'Test size:   {len(test_dataset)}')"
+    "print(f\"{'-'*60}\\nTrain size:  {len(train_dataset)}\\t\\t(Files: {len(train_subset)})\")\n",
+    "print(f'Val. size:   {len(val_dataset)}\\t\\t(Files: {len(val_subset)})')\n",
+    "print(f'Test size:   {len(test_dataset)}\\t\\t(Files: {len(test_subset)})')\n",
+    "if train_dataset.__len__() != sum(len(data) for data in train_dataset.data): print(\"Warning: Train Dataset Length Mismatch\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Inputs shape: torch.Size([1024, 1, 52])\n",
+      "Targets shape: torch.Size([1024])\n",
+      "Inputs: tensor([[[0.0000, 0.5000, 0.8386,  ..., 0.7418, 0.0000, 0.5135]],\n",
+      "\n",
+      "        [[0.0000, 0.5000, 0.9109,  ..., 0.5227, 0.0000, 0.2162]],\n",
+      "\n",
+      "        [[0.0000, 0.5000, 0.9430,  ..., 0.4584, 0.0000, 0.8108]],\n",
+      "\n",
+      "        ...,\n",
+      "\n",
+      "        [[0.0000, 0.4641, 0.9586,  ..., 0.5066, 0.6850, 0.7027]],\n",
+      "\n",
+      "        [[0.0000, 0.6260, 0.8841,  ..., 0.5181, 0.7586, 0.8919]],\n",
+      "\n",
+      "        [[0.0000, 0.6647, 0.8630,  ..., 0.4643, 0.8609, 0.7838]]])\n",
+      "Targets: tensor([0.1530, 0.4523, 0.4713,  ..., 0.5721, 0.3743, 0.3284])\n"
+     ]
+    }
+   ],
+   "source": [
+    "train_loader\n",
+    "# Example batch from the train_loader\n",
+    "example_batch = next(iter(train_loader))\n",
+    "inputs, targets = example_batch\n",
+    "\n",
+    "print(\"Inputs shape:\", inputs.shape)\n",
+    "print(\"Targets shape:\", targets.shape)\n",
+    "print(\"Inputs:\", inputs)\n",
+    "print(\"Targets:\", targets)"
    ]
   },
   {
@@ -516,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 473,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -559,7 +662,7 @@
     "# TRAINING CONFIGURATION -----------------------------------------------------------------------\n",
     "global NUM_EPOCHS\n",
     "\n",
-    "# HYPERPARAMETERS -----------------------\n",
+    "# HYPERPARAMETERS ------------------------------------------------------------\n",
     "NUM_EPOCHS = 50\n",
     "learning_rate = 1e-3 # 0.001 lr\n",
     "\n",
@@ -570,7 +673,7 @@
     "    #eps = 1e-8,             # term added to the denominator to improve numerical stability (default: 1e-8)\n",
     ")\n",
     "\n",
-    "# LOSS FUNCTION ---------------------------\n",
+    "# LOSS FUNCTION ----------------------------------------------------------------\n",
     "def loss_fn(model_output, target):\n",
     "    loss = F.mse_loss(model_output, target) # mean-squared error for regression\n",
     "    return loss\n",
@@ -579,6 +682,7 @@
     "criterion = nn.MSELoss()\n",
     "#criterion = nn.MSELoss(reduction='mean')\n",
     "\n",
+    "# ------------------------------------------------------------------------------\n",
     "# print Model and Optimizer state_dicts\n",
     "print(f\"{'-'*60}\\nModel state_dict:\")\n",
     "for param_tensor in model.state_dict(): print(f\"{param_tensor}:\\t {model.state_dict()[param_tensor].size()}\")\n",
@@ -938,7 +1042,7 @@
     "model.eval(); # set model to evaluation mode for inference\n",
     "model.load_state_dict(checkpoint['model_state_dict'])\n",
     "optimizer.load_state_dict(checkpoint['optimizer_state_dict'])\n",
-    "test_subset = checkpoint[\"subsets_split\"][2]"
+    "test_files = checkpoint[\"subsets_split\"][2]"
    ]
   },
   {
